# BattenVisionML

./: .TrackbarTest.py.swp  .real_time_object_detection.py.swp  BackgroundRemovalTest.py  BattenTest.py  ColorTest.py  ColorTuneBGR.py  ColorTuneHSV.py  DetectionMethodsTest.py  ImageFilter.py  LineTest.py  ObjectDetectTest.py  PLCTest.py  PencilTest.py  README.md  TrackbarTest.py  color_tuning.py  mp4Tojpg.py  poll_example.py  powerflex_motor_velocity.py  test.py  test.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
CTest/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
CTest/bin_dist/: libplctag.pc
CTest/include/: BattenDetection.h  ImageFilter.h  PLCCommTest.h  PLCVision.h  SimpleImageFilter.h
CTest/src/: BattenDetection.cpp  ImageFilter.cpp  PLCCommTest.cpp  PLCVision.cpp  SimpleImageFilter.cpp
CascadeClassifiers/: README.md  cascades_info.txt  neg.txt  pos.txt  pos.vec
CascadeClassifiers/cascade1/: cascade.xml  stage0.xml  stage3.xml  stage7.xml  stage9.xml
CascadeClassifiers/cascade2/: cascade.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage4.xml  stage5.xml  stage6.xml  stage8.xml
CascadeClassifiers/cascade3/: cascade.xml  stage4.xml  stage5.xml  stage7.xml  stage8.xml
CascadeClassifiers/cascade4/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage6.xml  stage9.xml
CascadeClassifiers/cascade5/: cascade.xml  stage1.xml  stage2.xml  stage3.xml  stage7.xml  stage8.xml  stage9.xml
CascadeClassifiers/cascade6/: cascade.xml  stage0.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage4.xml  stage5.xml  stage6.xml
CascadeClassifiers/cascade7/: cascade.xml  stage0.xml  stage1.xml  stage5.xml  stage6.xml  stage8.xml  stage9.xml
CascadeClassifiers/cascade8/: cascade.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage7.xml
Old/: LineMergeTest.py  VideoDetect.py  VideoObjectDetect.py  color_detect.py  edge_detect_pic.py  object_detect.py  test.py  test1.py  test2.py  video_frame.py
